# Range-proofAssignment

./: .gitignore  CMakeLists.txt  README.md
client/: package-lock.json  package.json
client/config/: client.conf
client/src/: config.ts  crypto_utils.ts  four_squares.ts  framing.ts  index.ts  proto.ts  range_proof.ts
proto/: nanopb.proto  secure_range_proof.proto
server/: CMakeLists.txt
server/config/: server.conf
server/include/srp/: bytes.hpp  crypto_utils.hpp  framing.hpp  proto_codec.hpp  range_proof.hpp  session.hpp
server/src/: crypto_utils.cpp  framing.cpp  main.cpp  proto_codec.cpp  range_proof.cpp  session.cpp  trezor_random_override.c
server/tools/: generate_proto.sh
tools/: make_zip.sh
